Renamed Umbrella.DataAccess to Umbrella.DataAccess.Abstractions and updated all namespaces. Did the same for Umbrella.TypeScript to Umbrella.TypeScript.Tools. Other C# 7 code changes.

--- a/DataAccess/src/Umbrella.DataAccess.Mapping/Umbrella.DataAccess.Mapping.csproj
+++ b/DataAccess/src/Umbrella.DataAccess.Mapping/Umbrella.DataAccess.Mapping.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <Description>Umbrella.DataAccess.Mapping Class Library</Description>
@@ -13,10 +13,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Umbrella.DataAccess\Umbrella.DataAccess.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="5.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="1.1.0" />
   </ItemGroup>
@@ -24,6 +20,10 @@
   <ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Umbrella.DataAccess.Abstractions\Umbrella.DataAccess.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
