--- a/Samples/Umbrella.AspNetCore.Samples/Umbrella.AspNetCore.Samples.csproj
+++ b/Samples/Umbrella.AspNetCore.Samples/Umbrella.AspNetCore.Samples.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <VersionPrefix>1.0.0-rel-build00095</VersionPrefix>
+    <VersionPrefix>1.0.0-rel-build00096</VersionPrefix>
     <TargetFramework>net46</TargetFramework>
     <PreserveCompilationContext>true</PreserveCompilationContext>
     <AssemblyName>Umbrella.AspNetCore.Samples</AssemblyName>
