--- a/TypeScript/src/Umbrella.TypeScript.Tools/Umbrella.TypeScript.Tools.csproj
+++ b/TypeScript/src/Umbrella.TypeScript.Tools/Umbrella.TypeScript.Tools.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <AssemblyName>dotnet-umbrella-typescript</AssemblyName>
     <OutputType>Exe</OutputType>
@@ -10,7 +10,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <Description>Umbrella.TypeScript Tools Class Library</Description>
-    <PackageVersion>1.0.0-rel-build00096</PackageVersion>
+    <PackageVersion>1.0.0-rel-build00097</PackageVersion>
     <Authors>Richard Edwards</Authors>
     <PackageId>Umbrella.TypeScript.Tools</PackageId>
     <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
