--- a/AspNetCore/src/Umbrella.AspNetCore.MultiTenant/Umbrella.AspNetCore.MultiTenant.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.MultiTenant/Umbrella.AspNetCore.MultiTenant.csproj
@@ -1,12 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Description>Umbrella.AspNetCore.MultiTenant Class Library</Description>
-    <VersionPrefix>1.0.0-rel-build00204</VersionPrefix>
-    <Authors>Richard Edwards</Authors>
     <TargetFramework>netstandard1.3</TargetFramework>
-    <AssemblyName>Umbrella.AspNetCore.MultiTenant</AssemblyName>
+  </PropertyGroup>
+
+  <PropertyGroup>
     <PackageId>Umbrella.AspNetCore.MultiTenant</PackageId>
+    <Version>1.0.0-rel-build00300</Version>
+    <Authors>Richard Edwards</Authors>
+    <Company>Zinofi Digital Ltd</Company>
+    <Copyright>Zinofi Digital Ltd © 2017</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
