--- a/TypeScript/src/Umbrella.TypeScript.Tools/Umbrella.TypeScript.Tools.csproj
+++ b/TypeScript/src/Umbrella.TypeScript.Tools/Umbrella.TypeScript.Tools.csproj
@@ -1,14 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
+  
   <PropertyGroup>
     <AssemblyName>dotnet-umbrella-ts</AssemblyName>
     <OutputType>Exe</OutputType>
     <TargetFrameworks>netcoreapp1.0</TargetFrameworks>
   </PropertyGroup>
+  
   <PropertyGroup>
-    <PackageVersion>1.0.0-rel-build00204</PackageVersion>
     <PackageId>Umbrella.TypeScript.Tools</PackageId>
     <PackageType>DotnetCliTool</PackageType>
-    <MinClientVersion>3.0</MinClientVersion>
+    <Version>1.0.0-rel-build00300</Version>
+    <Authors>Richard Edwards</Authors>
+    <Company>Zinofi Digital Ltd</Company>
+    <Copyright>Zinofi Digital Ltd © 2017</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
