--- a/AspNetCore/src/Umbrella.AspNetCore.DynamicImage/Umbrella.AspNetCore.DynamicImage.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.DynamicImage/Umbrella.AspNetCore.DynamicImage.csproj
@@ -1,12 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Description>Umbrella.AspNetCore.DynamicImage Class Library</Description>
-    <VersionPrefix>1.0.0-rel-build00204</VersionPrefix>
-    <Authors>Richard Edwards</Authors>
     <TargetFramework>net46</TargetFramework>
-    <AssemblyName>Umbrella.AspNetCore.DynamicImage</AssemblyName>
+  </PropertyGroup>
+
+  <PropertyGroup>
     <PackageId>Umbrella.AspNetCore.DynamicImage</PackageId>
+    <Version>1.0.0-rel-build00300</Version>
+    <Authors>Richard Edwards</Authors>
+    <Company>Zinofi Digital Ltd</Company>
+    <Copyright>Zinofi Digital Ltd © 2017</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
