--- a/Core/Umbrella.Utilities.Log4Net/Umbrella.Utilities.Log4Net.csproj
+++ b/Core/Umbrella.Utilities.Log4Net/Umbrella.Utilities.Log4Net.csproj
@@ -1,12 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Description>Umbrella.Utilities.Log4Net Class Library</Description>
-    <VersionPrefix>1.0.0-rel-build00204</VersionPrefix>
-    <Authors>Richard Edwards</Authors>
     <TargetFramework>netstandard1.3</TargetFramework>
-    <AssemblyName>Umbrella.Utilities.Log4Net</AssemblyName>
+  </PropertyGroup>
+
+  <PropertyGroup>
     <PackageId>Umbrella.Utilities.Log4Net</PackageId>
+    <Version>1.0.0-rel-build00300</Version>
+    <Authors>Richard Edwards</Authors>
+    <Company>Zinofi Digital Ltd</Company>
+    <Copyright>Zinofi Digital Ltd © 2017</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
