--- a/Core/test/Umbrella.Utilities.Test/Umbrella.Utilities.Test.csproj
+++ b/Core/test/Umbrella.Utilities.Test/Umbrella.Utilities.Test.csproj
@@ -14,7 +14,7 @@
     <PackageReference Include="xunit" Version="2.2.0" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
+  <ItemGroup>
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
