--- a/DynamicImage/src/Umbrella.DynamicImage.Abstractions/Umbrella.DynamicImage.Abstractions.csproj
+++ b/DynamicImage/src/Umbrella.DynamicImage.Abstractions/Umbrella.DynamicImage.Abstractions.csproj
@@ -4,6 +4,13 @@
     <TargetFramework>netstandard1.3</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <Version>1.0.0-rel-build00300</Version>
+    <Authors>Richard Edwards</Authors>
+    <Company>Zinofi Digital Ltd</Company>
+    <Copyright>Zinofi Digital Ltd © 2017</Copyright>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="1.1.1" />
   </ItemGroup>
