--- a/Legacy/src/Umbrella.Legacy.WebUtilities.DataAnnotations/Umbrella.Legacy.WebUtilities.DataAnnotations.csproj
+++ b/Legacy/src/Umbrella.Legacy.WebUtilities.DataAnnotations/Umbrella.Legacy.WebUtilities.DataAnnotations.csproj
@@ -1,11 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <VersionPrefix>1.0.0-rel-build00204</VersionPrefix>
-    <Authors>Richard Edwards</Authors>
     <TargetFramework>net462</TargetFramework>
-    <AssemblyName>Umbrella.Legacy.WebUtilities.DataAnnotations</AssemblyName>
+  </PropertyGroup>
+
+  <PropertyGroup>
     <PackageId>Umbrella.Legacy.WebUtilities.DataAnnotations</PackageId>
+    <Version>1.0.0-rel-build00300</Version>
+    <Authors>Richard Edwards</Authors>
+    <Company>Zinofi Digital Ltd</Company>
+    <Copyright>Zinofi Digital Ltd © 2017</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,12 +20,9 @@
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.3" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
+  <ItemGroup>
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Reference Include="System.ComponentModel.DataAnnotations" />
   </ItemGroup>
 
