--- a/TypeScript/src/Umbrella.TypeScript/Umbrella.TypeScript.csproj
+++ b/TypeScript/src/Umbrella.TypeScript/Umbrella.TypeScript.csproj
@@ -3,11 +3,13 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard1.5</TargetFrameworks>
   </PropertyGroup>
+  
   <PropertyGroup>
-    <Description>Umbrella.TypeScript Class Library</Description>
-    <PackageVersion>1.0.0-rel-build00204</PackageVersion>
-    <Authors>Richard Edwards</Authors>
     <PackageId>Umbrella.TypeScript</PackageId>
+    <Version>1.0.0-rel-build00300</Version>
+    <Authors>Richard Edwards</Authors>
+    <Company>Zinofi Digital Ltd</Company>
+    <Copyright>Zinofi Digital Ltd © 2017</Copyright>
   </PropertyGroup>
   
   <ItemGroup>
