--- a/Test/Umbrella.TypeScript.Aurelia.Tools.Test/Umbrella.TypeScript.Aurelia.Tools.Test.csproj
+++ b/Test/Umbrella.TypeScript.Aurelia.Tools.Test/Umbrella.TypeScript.Aurelia.Tools.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>    
     <TargetFramework>netcoreapp1.1</TargetFramework>
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Core\Umbrella.TypeScript.Tools.Aurelia\Umbrella.TypeScript.Tools.Aurelia.csproj" />
+    <ProjectReference Include="..\..\Core\Umbrella.TypeScript.Aurelia.Tools\Umbrella.TypeScript.Aurelia.Tools.csproj" />
   </ItemGroup>
 
   <ItemGroup>
