Fixes Updated to build00305

--- a/TypeScript/src/Umbrella.TypeScript.Aurelia.Tools/Umbrella.TypeScript.Aurelia.Tools.csproj
+++ b/TypeScript/src/Umbrella.TypeScript.Aurelia.Tools/Umbrella.TypeScript.Aurelia.Tools.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <AssemblyName>dotnet-umbrella-ts-aurelia</AssemblyName>
@@ -9,13 +9,14 @@
   <PropertyGroup>
     <PackageId>Umbrella.TypeScript.Aurelia.Tools</PackageId>
     <PackageType>DotnetCliTool</PackageType>
-    <Version>1.0.0-rel-build00304</Version>
+    <Version>1.0.0-rel-build00305</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2017</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Umbrella.DataAnnotations\Umbrella.DataAnnotations.csproj" />
     <ProjectReference Include="..\Umbrella.TypeScript.Aurelia\Umbrella.TypeScript.Aurelia.csproj" />
     <ProjectReference Include="..\Umbrella.TypeScript.Tools\Umbrella.TypeScript.Tools.csproj" />
   </ItemGroup>
