--- a/TypeScript/test/Umbrella.TypeScript.Aurelia.Test/Umbrella.TypeScript.Aurelia.Test.csproj
+++ b/TypeScript/test/Umbrella.TypeScript.Aurelia.Test/Umbrella.TypeScript.Aurelia.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>    
     <TargetFramework>netcoreapp1.1</TargetFramework>
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Core\Umbrella.DataAnnotations\Umbrella.DataAnnotations.csproj" />
     <ProjectReference Include="..\..\Core\Umbrella.TypeScript.Aurelia\Umbrella.TypeScript.Aurelia.csproj" />
   </ItemGroup>
 
