Separated the ModelState classes into their own package to enable the TypeScript tooling to have to load in fewer assemblies when it runs. Updated to build00306.

--- a/Core/src/Umbrella.WebUtilities.ModelState/Umbrella.WebUtilities.ModelState.csproj
+++ b/Core/src/Umbrella.WebUtilities.ModelState/Umbrella.WebUtilities.ModelState.csproj
@@ -1,18 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.3</TargetFramework>
+    <TargetFramework>netstandard1.1</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup>
+    <PackageId>Umbrella.WebUtilities.ModelState</PackageId>
     <Version>1.0.0-rel-build00306</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
-    <Copyright>Zinofi Digital Ltd © 2017</Copyright>
+    <Copyright>Zinofi Digital Ltd 2017</Copyright>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="1.1.1" />
-  </ItemGroup>
 
 </Project>
