Fixed package build version issue. Updated to version build00311

--- a/Core/Umbrella.DynamicImage.Caching.Azure/Umbrella.DynamicImage.Caching.Azure.csproj
+++ b/Core/Umbrella.DynamicImage.Caching.Azure/Umbrella.DynamicImage.Caching.Azure.csproj
@@ -4,6 +4,13 @@
     <TargetFramework>netstandard1.3</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <Version>1.0.0-rel-build00311</Version>
+    <Authors>Richard Edwards</Authors>
+    <Company>Zinofi Digital Ltd</Company>
+    <Copyright>Zinofi Digital Ltd 2017</Copyright>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="WindowsAzure.Storage" Version="8.1.1" />
   </ItemGroup>
