--- a/DynamicImage/src/Umbrella.DynamicImage.SoundInTheory/Umbrella.DynamicImage.SoundInTheory.csproj
+++ b/DynamicImage/src/Umbrella.DynamicImage.SoundInTheory/Umbrella.DynamicImage.SoundInTheory.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net46</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup>
-    <Version>1.0.0-rel-build00313</Version>
+    <Version>1.0.0-rel-build00314</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd ? 2017</Copyright>
@@ -14,7 +14,6 @@
   <ItemGroup>
     <PackageReference Include="DynamicImage" Version="3.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="1.1.1" />
-    <PackageReference Include="Moq" Version="4.7.8" />
   </ItemGroup>
 
   <ItemGroup>
