Renamed the blob storage caching package to end with AzureStorage instead of Azure to allow for other packages to be added for dynamic image caching for other Azure services. Renamed the associated test project. Updated version to build00317

--- a/Test/Umbrella.DynamicImage.Caching.AzureStorage.Test/Umbrella.DynamicImage.Caching.AzureStorage.Test.csproj
+++ b/Test/Umbrella.DynamicImage.Caching.AzureStorage.Test/Umbrella.DynamicImage.Caching.AzureStorage.Test.csproj
@@ -13,7 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Umbrella.DynamicImage.Abstractions\Umbrella.DynamicImage.Abstractions.csproj" />
-    <ProjectReference Include="..\..\Core\Umbrella.DynamicImage\Umbrella.DynamicImage.csproj" />
+    <ProjectReference Include="..\..\Core\Umbrella.DynamicImage.Caching.AzureStorage\Umbrella.DynamicImage.Caching.AzureStorage.csproj" />
   </ItemGroup>
 
   <ItemGroup>
