--- a/DynamicImage/src/Umbrella.DynamicImage.SoundInTheory/Umbrella.DynamicImage.SoundInTheory.csproj
+++ b/DynamicImage/src/Umbrella.DynamicImage.SoundInTheory/Umbrella.DynamicImage.SoundInTheory.csproj
@@ -1,11 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net46</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup>
-    <Version>1.0.0-rel-build00316</Version>
+    <Version>1.0.0-rel-build00317</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd ? 2017</Copyright>
