--- a/Core/test/Umbrella.Utilities.Test/Umbrella.Utilities.Test.csproj
+++ b/Core/test/Umbrella.Utilities.Test/Umbrella.Utilities.Test.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net46</TargetFramework>
+    <TargetFramework>net462</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
