--- a/FileSystem/src/Umbrella.FileSystem.Disk/Umbrella.FileSystem.Disk.csproj
+++ b/FileSystem/src/Umbrella.FileSystem.Disk/Umbrella.FileSystem.Disk.csproj
@@ -5,19 +5,16 @@
   </PropertyGroup>
 
   <PropertyGroup>
+    <PackageId>Umbrella.FileSystem.Disk</PackageId>
     <Version>1.0.0-rel-build00321</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
-    <Copyright>Zinofi Digital Ltd ? 2017</Copyright>
+    <Copyright>Zinofi Digital Ltd 2017</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="1.1.1" />
-    <PackageReference Include="System.ValueTuple" Version="4.3.0" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\Umbrella.FileSystem.Abstractions\Umbrella.FileSystem.Abstractions.csproj" />
+    <ProjectReference Include="..\Umbrella.Utilities\Umbrella.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
