--- a/WCF/src/Umbrella.Extensions.DependencyInjection.WCF/Umbrella.Extensions.DependencyInjection.WCF.csproj
+++ b/WCF/src/Umbrella.Extensions.DependencyInjection.WCF/Umbrella.Extensions.DependencyInjection.WCF.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+ï»¿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net46</TargetFramework>
@@ -9,12 +9,12 @@
     <Version>1.0.0-rel-build00338</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
-    <Copyright>Zinofi Digital Ltd © 2017</Copyright>
+    <Copyright>Zinofi Digital Ltd ï¿½ 2017</Copyright>
     <Description>This is an experimental package to determine the feasibility of using the Microsoft.Extensions.DependencyInjection DI Container with WCF.</Description>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="1.1.1" />
   </ItemGroup>
 
   <ItemGroup>
