Updated N2 to latest version

--- a/N2CMS/src/Umbrella.N2/Umbrella.N2.csproj
+++ b/N2CMS/src/Umbrella.N2/Umbrella.N2.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net46</TargetFramework>
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="N2CMS" Version="2.9.6.17" />
+    <PackageReference Include="N2CMS" Version="2.9.6.18" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
   </ItemGroup>
 
